# CupidNow

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/routers/: analyze.py
backend/app/services/: ai_analysis.py  cold_war.py  encryption.py  first_conversation.py  parser.py  reply_analysis.py  segmenter.py  stats.py  text_analysis.py  time_patterns.py  transfer_analysis.py
backend/cupidnow_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/data/: user_dict.txt
backend/scripts/: gen_user_dict.py
backend/tests/: test_ai_analysis.py  test_api_analyze.py  test_cold_war.py  test_encryption.py  test_first_conversation.py  test_integration.py  test_parser.py  test_reply_analysis.py  test_segmentation.py  test_stats.py  test_text_analysis.py  test_time_patterns.py
backend/tests/fixtures/: sample_chat.txt  sample_chat_coldwar.txt
docs/plans/: 2026-02-12-cupidnow-design.md  2026-02-12-cupidnow-implementation.md
frontend/: .env.production  .gitignore  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: FileDropzone.tsx
frontend/src/components/dashboard/: BasicStatsCards.tsx  ColdWarTimeline.tsx  FirstConversation.tsx  GoldenQuotes.tsx  GoodnightAnalysis.tsx  LoveScoreHero.tsx  PersonBalance.tsx  ReplyBehavior.tsx  SentimentAnalysis.tsx  ShareCTA.tsx  (+5 more)
frontend/src/data/: mockResult.ts
frontend/src/lib/: encryption.ts
frontend/src/pages/: DashboardPage.tsx  UploadPage.tsx
frontend/src/types/: analysis.ts
